--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "description": "Gestion de Estudiantes",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "ayrtonHacker": "nodemon app.js"
   },
   "author": "aytonsobich",
   "license": "ISC"
