--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "mysql": "^2.18.1",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "sweetalert2": "^11.4.32"
   },
   "name": "gestiondeestudiantes",
   "version": "1.0.0",
